2011-02-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/man1_links.am: Install manpage links as .so requests.

2011-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/man1_links.am: New Makefile fragments for manpage links.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Distribute the whole tests/ tree.

2010-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (triptrap): New target to first ensure that
	web2c/Makefile exists and then run TRIP and TRAP tests.

2010-02-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add tests/common-test.pl.

2010-02-18  Karl Berry  <karl@tug.org>

	* tests: new subdir for common test files.

2009-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Import bibtexu (static icu libs only).

2009-05-26  Karl Berry  <karl@tug.org>

	* README: dvipdfm can now be emulated by dvipdfmx.

2009-02-02  Karl Berry  <karl@tug.org>

	* install-sh: rename from install.sh.

2008-05-28  Karl Berry  <karl@tug.org>

	* Makefile.in (default all): always make all, rather than $@.

2008-04-25  Karl Berry  <karl@tug.org>

	* xdvik/Makefile.in (xdvizilla): skip (un)installing this.  debian
	477160, tex-live 24 Apr 2008 02:03:57.

2008-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* withenable.ac (kpse_texk_pkglist): m4_defined list of all
	optional packages, used to generate --without-PKG options.
	* configure.in: use kpse_texk_pkglist to select subdirs.

2008-02-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Convert from autoconf-2.13 to autoconf-2.59+:
	* configure.in: Use KPSE_CONFIG_SUBDIRS.
	* Makefile.in: Add @configure_input@ line.
	* aclocal.m4 (new): Generated (aclocal -I m4).
	* configure: Regenerated (autoconf).

2008-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.in: Removed configure kludge for dvipos.
	* configure: Regenerated (autoconf2.13).

2008-01-13  Karl Berry  <karl@tug.org>

	* withenable.ac (afm2pl, dtl): more --without options.